<resources>
    <string name="app_name">DashBoard</string>
    <string name="dashboard_name">Welcome Sodiq,</string>
    <string name="login_time">"Last login: 01/06/2019"</string>
    <string name="exeat_request">"Exeat Requests"</string>
    <string name="request_number_1">"10"</string>
    <string name="approved_request">"Approved Requests"</string>
    <string name="request_number_2">"6"</string>
    <string name="rejected_request">"Rejected Requests"</string>
    <string name="rejected_request_2">"Rejected Requests"</string>
    <string name="request_number_3">"1"</string>
    <string name="request_number_4">"3"</string>
    <string name="request_hint">"Recent Requests"</string>
    <string name="approved_date">"13/07/2019 16:37:53"</string>
    <string name="approved_message">"APPROVED"</string>
    <string name="rejected_message">"REJECTED"</string>
    <string name="approved_action">"I want to go and activate \nmy ATM card at the bank"</string>
    <string name="rejected_action">"I want to go collect some \nforms from a friend"</string>
    <string name="card_time">Dep Time: 10:30 am \nArrival Time: 1:30 pm</string>
</resources>