<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/dashboard_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_name"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/login_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login_time"
        android:textColor="@color/black"
        android:textSize="13sp" />

    <ImageView
        android:id="@+id/notification_bell"
        android:layout_marginTop="10dp"
        android:layout_marginStart="280dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:src="@drawable/ic_baseline_notifications_24" />

    <androidx.cardview.widget.CardView
        android:layout_marginTop="105dp"
        android:layout_width="150dp"
        android:layout_height="90dp"
        app:cardCornerRadius="7dp"
        app:cardBackgroundColor="@color/teal_700"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/request_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exeat_request"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/request_2"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_number_1"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/request_1"/>

            <ImageView
                android:id="@+id/assignment_view"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="90dp"
                app:layout_constraintTop_toBottomOf="@+id/request_1"
                android:src="@drawable/ic_baseline_assignment_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_marginTop="105dp"
        android:layout_marginStart="160dp"
        android:layout_width="150dp"
        android:layout_height="90dp"
        app:cardCornerRadius="7dp"
        app:cardBackgroundColor="@color/green"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/request_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/approved_request"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/request_4"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_number_2"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/request_3"/>

            <ImageView
                android:id="@+id/turned_view"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="90dp"
                app:layout_constraintTop_toBottomOf="@+id/request_3"
                android:src="@drawable/ic_baseline_assignment_turned_in_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



</RelativeLayout>